Fri Aug 30 22:00:09 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h.in src/tds/login.c:
	- add one char to library name to store tds-library
	* patching file src/tds/iconv.c:
	- fix conversion from mssql ucs2 for big endian machines (patch #565831)

Fri Aug 30 22:00:09 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h src/ctlib/cs.c src/dblib/dblib.c
	  src/odbc/convert_tds2sql.c
	  (patch by Bill Thompson):
	- pass precision/scale to tds_convert
	- date return fixed for ms compatibility
	* src/dblib/unittests/t0016.c
	  (patch by Bill Thompson):
	- check errors (now work, very good job)
	* src/dblib/unittests/Makefile.am:
	- added test file to distribution
	* src/ctlib/unittests/t0006.c:
	- fixed for correction of money conversions
	* src/tds/convert.c:
	- cleanup
	- add conversion from real to numeric (Bill Thompson)
	- added preliminary documentation for tds_convert
	* src/tds/unittests/t0008.c:
	- readded different precision/scale tests
	
Fri Aug 30 16:15:54 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h.in src/tds/convert.c:
	- fixed money problem

Fri Aug 30 15:03:12 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/asprintf.c: fixed compile in FreeBSD
	* src/tds/convert.c: added conversions from float/real to ints

Fri Aug 30 00:48:22 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* src/dblib/dblib.c	more helpful stderr messages; should be tds_client_msg
	* src/tds/convert.c	bit->money
	
Thu Aug 29 20:22:46 EDT 2002	Brian Bruns <camber@ais.org>
	* src/tds/token.c: cleaned up tds7_process_result() 

Thu Aug 29 17:55:31 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* src/ctlib/ctutil.c: 	patch #602045
	- ctlib_handle_err_message wasn't propagating the return code from the callback
	* include/sybdb.h:
	* src/dblib/dblib.c:	Patch #602086: Improves compatibility with Sybase's DB-Lib ABI.

Thu Aug 29 22:09:32 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>